--- a/src/app/core/landing/landing.component.html
+++ b/src/app/core/landing/landing.component.html
@@ -1,6 +1,5 @@
-<div class="d-flex justify-content-center align-items-center">
-    <a routerLink="/home">
-        <img  class=" align-self-center mx-auto" src="../../assets/LOGO.png"/>
-        <img  class=" align-self-center mx-auto" src="../../assets/hokeista.png"/>
+<div class="d-flex justify-content-center">
+    <a routerLink="/home" class=" align-middle">
+       <span class="svg-logo mx-auto" [innerHTML]="svg"></span>
     </a>
 </div>
