--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <header>
 	<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
-	  <a class="navbar-brand" (click)="onSigninOrLogout()"><img src="./../../../assets/logo.png"/></a>
+	  <a class="navbar-brand" (click)="onSigninOrLogout()"><img src="https://s3-eu-west-1.amazonaws.com/projekt-rola-bucket/logo.png"/></a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
